--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "homepage": "https://toxajin.github.io/cattyfriends-react",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "react-scripts": "4.0.3"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -10,7 +13,6 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
   },
